page shifting issue is fixed

--- a/app/caseflow_web/src/styles.scss
+++ b/app/caseflow_web/src/styles.scss
@@ -14,3 +14,7 @@
 
   $primary-font:'Poppins', sans-serif;
   $second-font:'Poppins', sans-serif;
+
+  body{
+    overflow-x: hidden;
+  }
